    - progress indication was improved to be more detailed and smooth
    - defragmentation and optimization speedup performed
    - --all, --all-fixed command line keys added to the console interface
      and to the boot time defragmenter
    - boot time interface interactive mode commands set changed to be the same
      as in scripting mode
    - the following translations were updated:

      Dutch, Swedish

    - a bug preventing true Unicode paths from being displayed 
      in file fragmentation reports was fixed
    - one little bug causing a wrong progress bar appearance on Windows XP
      default theme was fixed


  Version 4.1.0  2010-03-06
  ------------------------------------------------------------------------------
    - few bugs in driver were fixed
    - a huge analysis speedup performed
    - one bug in GUI (#2964309) was fixed
    - one little bug preventing the Scheduler running on Windows 2000 was fixed
    - volume status messages were improved in UltraDefrag GUI
    - the report saving speedup was performed
    - the following translations were added:

      Belarusian, Bulgarian, Croatian, Filipino (Tagalog), Finnish, Icelandic,
      Macedonian, Norwegian, Romanian, Serbian, Ukrainian, Yiddish

    - the following translations were updated:

      Catalan, Chinese(Simplified), Chinese(Traditional), Czech, Danish,
      Dutch, Farsi, French(FR), German, Greek, Hungarian, Italian,
      Japanese, Korean, Latvian, Polish, Portuguese(BR), Portuguese,
      Russian, Slovak, Slovenian, Spanish(AR), Swedish, Thai, Turkish

    - /LANG command line option was added to the installer


  Version 4.0.0  2010-01-30
  ------------------------------------------------------------------------------
    - a lot of extremely important bugs were fixed
    - the strongest error handling was added to all program modules
    - program is available again for all 64-bit targets
    - documentation was rewritten to be much clearer